<resources>
     <string name="app_name">iPeso</string>
    <string name="net_timeout">Pasa el tiempo conexión de red</string>
    <string name="net_connect_failture"> Error de conexión de red</string>
    <string name="json_parse">Error de análisis</string>
    <string name="net_ssl_error">Error de verificación de certificado</string>
    <string name="unkown_error">Error desconocido</string>
    <string name="service_error">Error de servicio</string>
    <string name="unauthorised_out">Pasó el tiemopo la autenticación</string>
    <string name="input_phone_num">Introducir el número de celular</string>
    <string name="forget">¿Olvidar contraseña?</string>
    <string name="login">Iniciar</string>
    <string name="get_yanma">Enviar</string>
    <string name="regit">Registrarse</string>
    <string name="next">Iniciar</string>
    <string name="login_sucess">Iniciar sesión con éxito</string>
    <string name="pw_len_error">Favor establecer contraseña de iniciar sesión con 6~18 dígitos, incluido al menos dos tipos de números, letras y cadenas.</string>
    <string name="phone_num_error">Número de celular ilegal</string>
    <string name="update_new">Es la última versión</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_sure">Confirmar</string>
    <string name="update_version_note">Actualización de versión</string>
    <string name="double_fast">Toca tan rápido, favor intente de nuevo más tarde</string>
    <string name="passwd_rule">Favor establecer contraseña de iniciar sesión con 6~18 dígitos</string>
    <string name="passwd_rule1">incluido al menos dos tipos de números, letras y cadenas.</string>
    <string name="input_passwd">Introduzca contraseña</string>
    <string name="re_input_passwd">Volver a introducir contraseña de iniciar</string>
    <string name="passwd_empty">No puede dejar contraseña en blanco</string>
    <string name="old_new_no_mathine"> Debe introducir la misma contraseña dos veces</string>
    <string name="old_new_same">La nueva contraseña no puede ser igual a la contraseña anterior</string>
    <string name="version">Versión</string>
    <string name="is_news">Ya es la última versión</string>
    <string name="current_version">Versión actual%1$s</string>
    <string name="forget_pay_passwd">Olvidar contraseña de pago</string>
    <string name="forget_passwd">Olvidar contraseña de iniciar</string>
    <string name="modify_pay_passwd">Modificar contraseña de pago</string>
    <string name="modify_passwd">Modificar contraseña de iniciar</string>
    <string name="update_passwd_sucess">Modificar con éxito</string>
    <string name="quit">Salida</string>
    <string name="bind_alias_success">Enlaza alias con éxito</string>
    <string name="bind_alias_unknown_exception">fracaso en enlazar alias, error desconocido</string>
    <string name="bind_alias_error_frequency">fracaso en enlazar alias, solicitar demasiadas veces</string>
    <string name="bind_alias_error_param_error">fracaso en enlazar alias, error de parámetro</string>
    <string name="bind_alias_error_cid_lost">绑定别名失败,未获取到cid</string>
    <string name="bind_alias_error_request_filter">fracaso en enlazar alias, la solicitud se ignora</string>
    <string name="bind_alias_error_connect_lost">fracaso en enlazar alias, error de conexión de red</string>
    <string name="bind_alias_error_alias_invalid">fracaso en enlazar alias, alias inválido</string>
    <string name="bind_alias_error_sn_invalid">fracaso en enlazar alias, sn inválido</string>
    <string name="unbind_alias">desvincular alias</string>
    <string name="unbind_alias_unknown_exception">fracaso en cancelar enlazar alias, error desconocido</string>
    <string name="unbind_alias_success">Cancelar enlazar alias con éxito</string>
    <string name="unbind_alias_error_frequency">fracaso en cancelar enlazar alias, solicitar demasiadas veces</string>
    <string name="unbind_alias_error_param_error">fracaso en cancelar enlazar alias, error de parámetro</string>
    <string name="unbind_alias_error_request_filter">fracaso en cancelar enlazar alias, la solicitud se ignora</string>
    <string name="unbind_alias_error_cid_lost">fracaso en cancelar enlazar alias, no obtener cid</string>
    <string name="unbind_alias_error_connect_lost">fracaso en cancelar enlazar alias, error de conexión de red</string>
    <string name="unbind_alias_error_alias_invalid">fracaso en cancelar enlazar alias, alias inválido</string>
    <string name="unbind_alias_error_sn_invalid">fracaso en cancelar enlazar alias, sn inválido</string>
    <string name="add_tag">Añadir etiqueta</string>
    <string name="add_tag_unknown_exception">fracaso en añadir etiqueta, error desconocido</string>
    <string name="add_tag_success">接口调用成功</string>
    <string name="add_tag_error_count">接口调用失败, tag数量过大, 最大不能超过200个</string>
    <string name="add_tag_error_frequency">设置标签失败,频率过快</string>
    <string name="add_tag_error_null">接口调用失败, tag 为空</string>
    <string name="add_tag_error_repeat">设置标签失败, 标签重复</string>
    <string name="add_tag_error_unbind">设置标签失败, 服务未初始化成功</string>
    <string name="add_tag_error_not_online">还未登陆成功</string>
    <string name="add_tag_error_black_list">该应用已经在黑名单中,请联系售后支持!</string>
    <string name="add_tag_error_exceed">已存 tag 超过限制</string>
    <string name="push_transmission_data">收到一条透传测试消息</string>
    <string name="send_code">Ha mandado PIN a su número</string>
    <string name="char_limt">Las palabras alcanza el límite</string>
    <string name="input_yanma">Introduzca PIN</string>
    <string name="input_pay_passwd">Introducir contraseña de pago</string>
    <string name="input_re_pay_passwd">Reintroducir contraseña de pago</string>
    <string name="set">Confirmar</string>
    <string name="set_my">Configuración</string>
    <string name="vertify_code_empty">No puede dejar PIN en blanco</string>
    <string name="input_old_login_pw">Introducir vieja contraseña de iniciar</string>
    <string name="input__new_login_pw">Introducir nueva contraseña de iniciar</string>
    <string name="re_input_new_login_pw">Volver a introducir nueva contraseña de iniciar</string>
    <string name="input_old_pay_pw">Introducir vieja contraseña de pago</string>
    <string name="input__new_pay_pw">Introducir nueva contraseña de pago</string>
    <string name="re_input_new_pay_pw">Volver a introducir contraseña de pago</string>
    <string name="set_new_pay_passwd">Establecer nueva contraseña de reembolso</string>
    <string name="re_set_new_pay_passwd">Volver a establecer contraseña de reembolso</string>
    <string name="set_new_login_passwd">Establecer nueva contraseña de iniciar sesión</string>
    <string name="re_set_new_login_passwd">Volver a establecer nueva contraseña de iniciar sesión</string>
    <string name="please_input_yanma">Favor introduzca PIN primero</string>
    <string name="no_bindcard_setpasswd">actualmente no tiene tarjeta o establecer contraseña de pagar </string>
    <string name="select_file_error">error de elegir fotos</string>
    <string name="please_upload_card">cargar CURP</string>
    <string name="login_agree_proctrol">iniciar sesión es aceptar</string>
    <string name="regit_agree_proctrol">He leído y aceptado</string>
    <string name="regit_agree_proctrol1">el acuerdo de privacidad de %s</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="login_loading">Iniciando...</string>
    <string name="cut_conent">copiar con éxito</string>
    <string name="news">Centro de mensaje</string>
    <string name="add_card">新增信用卡</string>
    <string name="xrefreshview_header_hint_normal">Desplegando por abajo</string>
    <string name="xrefreshview_header_hint_ready">Liberar para actualizar</string>
    <string name="xrefreshview_header_hint_refreshing">Actualizando...</string>
    <string name="xrefreshview_header_hint_loading">Cargando...</string>
    <string name="xrefreshview_header_hint_loaded">Terminado</string>
    <string name="xrefreshview_header_hint_loaded_fail">Fracaso</string>
    <string name="xrefreshview_header_last_time">Tiempo de actualización anterior：</string>
    <string name="xrefreshview_footer_hint_normal">No hay más datos</string>
    <string name="xrefreshview_footer_hint_fail">Fracaso en cargar,favor apruebe de nuevo</string>
    <string name="xrefreshview_footer_hint_complete">No hay más datos</string>
    <string name="xrefreshview_footer_hint_click">Tocar para cargar más</string>
    <string name="xrefreshview_footer_hint_release">Liberar para cargar más</string>
    <string name="xrefreshview_footer_hint_ready">Liberar para cargar más</string>
    <string name="xrefreshview_never_refresh">Nunca hay actualización</string>
    <string name="xrefreshview_refresh_justnow">Última actualización</string>
    <string name="xrefreshview_refresh_minutes_ago">%1s分钟之前刷新</string>
    <string name="xrefreshview_refresh_hours_ago">%1s小时之前刷新</string>
    <string name="xrefreshview_refresh_days_ago">%1s天之前刷新</string>
    <string name="index">Inicio</string>
    <string name="my">Mi cuenta</string>
    <string name="index_tilte">iPeso </string>
    <string name="head_tilte">iPeso</string>
    <string name="jie_amout">monto de préstamo</string>
    <string name="jie_note">solo puede ser el múltiplo de 100</string>
    <string name="jie_lilv">tasa diaria de 1.1%（sin IVA）</string>
    <string name="jiekuan_fast">Solicita tu préstamo ahora</string>
    <string name="shen_he_time">aprobar la verificación en 5 minutos</string>
    <string name="review_refuse_note">lo siento, no ha pasado la revisión de préstamo, \nfavor complete la información</string>
    <string name="review_refuse_30_note">Lo siento,su préstamo no se aprueba la verificación ,\npor favor,inténtelo de nuevo después de 30 días!</string>
    <string name="reviewing">verificando</string>
    <string name="review_refuse">entregar de nuevo </string>
    <string name="return_account">cuenta del reembolso</string>
    <string name="return_code">nombre de cuenta</string>
    <string name="return_date">fecha del reembolso</string>
    <string name="due_date_rate">tasa diaria vencida de %s</string>
    <string name="due_jie_date_rate">tasa diaria %1$s</string>
    <string name="due_day_btn">vencido %1$d días</string>
    <string name="repay_day_btn">quedar %1$d días a reembolsar </string>
    <string name="withdraw_cash_avail">poder retirar </string>
    <string name="jiekuan_lvlu">tasa diaria</string>
    <string name="withdraw_cash">retirar</string>
    <string name="loan_history">Notas de préstamo</string>
    <string name="ti_e">提额</string>
    <string name="yao_friend">invitar a amigos</string>
    <string name="help_ceneter">Ayuda</string>
    <string name="sugesst_replay">Comentarios</string>
    <string name="about_replay">Sobre pagar</string>
    <string name="about_us">Acerca de nosotros</string>
    <string name="quit_back_note">tocar dos veces para retirar</string>
    <string name="amout_avail">monto máximo(peso)</string>
    <string name="amout_withdraw">monto de retirar(peso)</string>
    <string name="amout_repayment">Importe de reembolso actual(peso)</string>
    <string name="amout_applay">solicitar monto de préstamo(peso)</string>
    <string name="days">%d día(s)</string>
    <string name="no_history_news">No hay noticias históricas</string>
    <string name="jie_date">plazo de préstamo</string>
    <string name="loan_days">días</string>
    <string name="repaymenting">llegando</string>
    <string name="repayment_faiture">Fracaso en llegar</string>
    <string name="repyment_tishi_failture">Lo siento,fracaso en llegar en su cuenta por la culpa del banco, favor verifique su cuenta del banco</string>
    <string name="input">Introducir</string>
    <string name="invite_code">Código do invitación</string>
    <string name="finishi">Terminar</string>
    <string name="over_step">Pasar</string>
    <string name="input_inivte_6code">Introduzca código de invitación de 6 cifras</string>
</resources>