<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />
    <include layout="@layout/include_title"/>
    <TextView
        style="@style/binder_txt_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="27dp"

        android:text="@string/input_old_pay_pw" />

    <EditText
        android:id="@+id/edit_old_passwd"
        style="@style/introducir"
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="21dp"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:background="@drawable/set_passwd_shape"
        android:hint="@string/input" />
    <TextView
        style="@style/binder_txt_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="27dp"
        android:text="@string/input__new_pay_pw" />

    <EditText
        android:id="@+id/edit_new_passwd"
        style="@style/introducir"
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="21dp"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:background="@drawable/set_passwd_shape"
        android:hint="@string/input" />


    <TextView

        style="@style/binder_txt_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="18dp"
        android:text="@string/re_input_new_pay_pw" />

    <EditText
        android:id="@+id/edit_re_new_passwd"
        style="@style/introducir"
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginLeft="12dp"
        android:inputType="numberPassword"
        android:layout_marginTop="21dp"
        android:maxLength="6"
        android:hint="@string/input"
        android:background="@drawable/set_passwd_shape" />

    <Button
        android:id="@+id/btn_set"
        style="@style/btn_gray_style"
        android:layout_width="336dp"
        android:layout_height="44dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="27dp"
        android:text="@string/set"
       />
    <TextView
        android:id="@+id/tv_forget_pay_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/olvidar_contrase_a"
        android:layout_marginTop="16dp"
        android:layout_marginRight="12dp"
        android:layout_gravity="right"
        android:text="@string/forget_pay_passwd"
        />
</LinearLayout>