<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        />
     <include layout="@layout/include_title"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_versoin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/version" />

                <TextView
                    android:id="@+id/tv_version"
                    style="@style/ya_es_la_ltima_versi_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="13dp"
                    android:text="@string/current_version" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_forget_pay_passwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt"
                android:layout_marginTop="6dp"
                android:visibility="gone">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/forget_pay_passwd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_modify_pay_passwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/modify_pay_passwd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_forget_passwd"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/forget_passwd" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_modify_passwd"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/modify_passwd" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_about_repay"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_replay" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_about_us"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about_us" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_quit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/row_heigt">

                <TextView
                    style="@style/modificar_contrase_a_de_pago"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/quit" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>